# mycmakeexamples

./: README.md
CMake_Beispiel_01/: CMakeLists.txt
CMake_Beispiel_02/: CMakeLists.txt  Hello_World.cpp
CMake_Beispiel_02/MathFunctions/: CMakeLists.txt
CMake_Beispiel_03/: CMakeLists.txt  main.cpp
CMake_Beispiel_04/: CMakeLists.txt
CMake_Beispiel_04/MathFunctions/: CMakeLists.txt  mysqrt.cpp
CMake_Beispiel_04/include/: ProgramConfig.h  internal_functions.h
CMake_Beispiel_04/src/: internal_functions.cpp  main.cpp
CMake_Beispiel_05/: CMakeLists.txt
